--- a/Wednesday_Thieves_Blank.ipynb
+++ b/Wednesday_Thieves_Blank.ipynb
@@ -1073,14 +1073,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'apple': '2', 'banana': '10'}\n"
+      "that is not an option\n",
+      "that is not an option\n",
+      "{'apple': '2', 'bananas': '3'}\n",
+      "{'apple': '2'}\n",
+      "{'apple': '2'}\n"
      ]
     }
    ],
@@ -1089,25 +1093,35 @@
     "\n",
     "shopping_list={}\n",
     "def modify_list(a_list):\n",
+    "    \"\"\"Function that will allow a user to add, delete, or see \n",
+    "    items in a shopping cart\"\"\"\n",
     "    \n",
     "    while True:\n",
+    "        #ask the user if they want to show, add, or delete an items, else quit \n",
+    "        # the function.\n",
     "        choice = input(\"Do you want to: show/Add/delete your list or quit? \")\n",
+    "        #if user imputs \"show\" or \"Show\", print the list.\n",
     "        if choice.lower() == 'show':\n",
     "            print(a_list)\n",
+    "            #if user imputs \"add\" or \"Add\" ask what theyd like to add and how \n",
+    "            # much of it. then add them to the dictionary.\n",
     "        elif choice.lower() == 'add':\n",
     "            item = input(\"What would you like to add? \")\n",
     "            count = input(\"how many would you like to get? \")\n",
     "            a_list[item] = count\n",
+    "            #if imput is 'delete' 'Delete' 'remove' or 'Remove' \n",
+    "            #ask which item they want out of the cart and remove it.\n",
     "        elif choice.lower() == 'delete' or choice.lower() == 'remove':\n",
     "            remove = input(\"What would you like to remove? \")\n",
     "            if remove in a_list:\n",
     "                del a_list[remove]\n",
-    "\n",
+    "        # if they input 'quit' stop the function.\n",
     "        elif choice.lower() == 'quit':\n",
     "            break\n",
-    "\n",
+    "        #anything else tell them thats not an option.\n",
     "        else:\n",
     "            print('that is not an option')\n",
+    "        #return the list.\n",
     "    return a_list\n",
     "\n",
     "print(modify_list(shopping_list))\n",
